--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,23 +3,27 @@
           package="com.example.odtwarzacz"
           android:versionCode="1"
           android:versionName="1.0">
-    <uses-sdk android:minSdkVersion="20"/>
-    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-sdk android:minSdkVersion="21"/>
+    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher"
+    >
         <activity android:name="MainActivity"
                   android:label="@string/app_name"
-                  android:theme="@android:style/Theme.Holo.Light.NoActionBar">
+                  android:theme="@android:style/Theme.Holo.Light.NoActionBar"
+        >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".AudioActivity"
+        <activity android:name=".FileListActivity"
+                  android:theme="@android:style/Theme.Holo.Light.NoActionBar"/>
+        <activity android:name=".AudioPlayerActivity"
                   android:theme="@android:style/Theme.Holo.Light.NoActionBar"/>
         <activity android:name=".VideoActivity"
                   android:theme="@android:style/Theme.Holo.Light.NoActionBar"/>
-        <activity android:name=".PdfActivity"/>
         <activity android:name=".PdfReaderActivity"/>
-        <activity android:name=".ImageActivity"
+        <activity android:name=".ImageViewerActivity"
                   android:theme="@android:style/Theme.Holo.Light.NoActionBar"/>
     </application>
 </manifest>
